Cycles renders particle emitter in linked group even when emitter is set not to render #34480

Closed
opened 2013-02-28 23:14:57 +01:00 by Lucio Cavalcanti · 4 comments

%%%How to reproduce it (easy way, open attached file and render it).
Or ...

  • create a particle object, set Emitter rendering to False
  • create a group with this object
  • save and open a new file where you link in the group and add as group instance
  • render it .... the emitter is visible :/

Bottomline: When rendering linked objects with hair, the emitter is rendered or not according with the Emitter checkbox, but, if the link is to a group, the emitter is always rendered.

Tested in 2.66 and trunk (>266)

%%%

%%%How to reproduce it (easy way, open attached file and render it). Or ... - create a particle object, set Emitter rendering to False - create a group with this object - save and open a new file where you link in the group and add as group instance - render it .... the emitter is visible :/ Bottomline: When rendering linked objects with hair, the emitter is rendered or not according with the Emitter checkbox, but, if the link is to a group, the emitter is always rendered. Tested in 2.66 and trunk (>266) %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%bug confirmed here (OSX). assigning it to Brecht.
It seems related to:
http://projects.blender.org/tracker/?func=detail&atid=498&aid=33238&group_id=9%%%

%%%bug confirmed here (OSX). assigning it to Brecht. It seems related to: http://projects.blender.org/tracker/?func=detail&atid=498&aid=33238&group_id=9%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34480
No description provided.