Fix #34480: cycles hair render in dupligroup did hide the emitter properly in some cases.